fix: increase header main title font size for better visibility

--- a/Resources/Css/style.css
+++ b/Resources/Css/style.css
@@ -94,7 +94,7 @@ header {
 }
 
 .header-main-title {
-    font-size: 7rem;
+    font-size: 7.2rem;
     font-family: "Gothic A1", sans-serif;
     font-weight: 900;
     margin-left: -16rem;
